updated model submission

--- a/hackathon/templates/submissions/leaderboard.html
+++ b/hackathon/templates/submissions/leaderboard.html
@@ -10,7 +10,7 @@
 
 	{% if teams %}
 
-	<div class="col-lg-8">
+	<div class="col-lg-offset-2 col-lg-8">
         <table class="table">
         <thead>
         	<th>position</th>
