--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -43,13 +43,7 @@
           <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'leaderboard' %}">Leaderboard</a>
+                <a class="nav-link" href="{% url 'leaderboard' %}">Public Leaderboard</a>
               </li>
             </ul>
 
