--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -53,6 +53,9 @@
             <ul class="nav navbar-nav pull-right">
               {% if request.user.is_authenticated %}
                 <li class="nav-item">
+                  <a class="nav-link" href="{% url 'data' %}">Data</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="{% url 'list' %}">Submissions</a>
                 </li>
                 <li class="nav-item">
