--- a/hackathon/templates/pages/data.html
+++ b/hackathon/templates/pages/data.html
@@ -13,6 +13,7 @@
   <hr>
 
   <p><a class="btn btn-lg btn-success" href="{% static 'files/train_test.zip' %}" role="button">Get Train and Test</a></p>
+  <p><a class="btn btn-lg btn-success" href="{% static 'files/DragonCityHackathon_baseline.R' %}" role="button">Get Baseline Model</a></p>
 
 </div>
 {% endblock content %}
