--- a/hackathon/templates/pages/data.html
+++ b/hackathon/templates/pages/data.html
@@ -12,8 +12,8 @@
   <h1> Get the data </h1>
   <hr>
 
-  <p><a class="btn btn-lg btn-success" href="{% static 'files/train_test.zip' %}" role="button">Get Train and Test</a></p>
-  <p><a class="btn btn-lg btn-success" href="{% static 'files/DragonCityHackathon_baseline.R' %}" role="button">Get Baseline Model</a></p>
+  <p><a class="btn btn-lg btn-success" href="https://s3.eu-central-1.amazonaws.com/bcndatahackathon/train_test.zip" role="button">Get Train and Test</a></p>
+  <p><a class="btn btn-lg btn-success" href="{https://s3.eu-central-1.amazonaws.com/bcndatahackathon/DragonCityHackathon_baseline.R" role="button">Get Baseline Model</a></p>
 
 </div>
 {% endblock content %}
