--- a/hackathon/templates/pages/home.html
+++ b/hackathon/templates/pages/home.html
@@ -36,14 +36,16 @@
           Welcome data hacker to the BCN Gaming Hackathon.<br> 
           24 hours to show your habilities to the world.<br> 
           Ready?</p>
+        <!-- <div class="lead" id="clock"></div> -->
+        
         <p><a class="btn btn-lg btn-success" href="#" role="button">Get started</a></p>
+        
 
-         <div class="panel panel-default" data-toggle="tooltip" data-placement="top" title="Beautifull, insn't it?">
-      <div class="panel-body">
-        <div class="lead" id="clock"></div>
-      </div>
-    </div>
-	</div>
+
+        
+      
+    
+</div>
 
   <!--
 	<div class="row">
@@ -70,6 +72,9 @@
 {% endblock content %}
 
 {% block extra_js %}
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="//cdn.rawgit.com/hilios/jQuery.countdown/2.1.0/dist/jquery.countdown.min.js"></script>
 <script>
 
   // Turn on Bootstrap
