--- a/hackathon/templates/pages/home.html
+++ b/hackathon/templates/pages/home.html
@@ -14,11 +14,26 @@
       margin-left: auto;
       margin-right: auto;
     }
+.panel-default {
+    border-color: #ddd;
+}
+.panel-body {
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    padding: 15px;
+}
+
 #btn-reset {
   margin-right: 10px;
 }
 #clock {
   margin-bottom: 0;
+  line-height: 1.42857143;
+  color: #333;
 }
 </style>
 {% endblock extra_css %}
@@ -36,40 +51,20 @@
           Welcome data hacker to the BCN Gaming Hackathon.<br> 
           24 hours to show your habilities to the world.<br> 
           Ready?</p>
-        <!-- <div class="lead" id="clock"></div> -->
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="lead" id="clock"></div>
+            </div>
+          </div>
+
         {% if user.is_authenticated %}
         <p><a class="btn btn-lg btn-success" href="{% url 'list' %}" role="button">Make a submission</a></p>
         {% else %}
-        <p><a class="btn btn-lg btn-success" href="{% url 'account_login' %}" role="button">Get started</a></p>
+        <p><a class="btn btn-lg btn-success" href="{% url 'account_login' %}  " role="button">Get started</a></p>
         {% endif %}
-        
-
-
-        
-      
-    
+          
 </div>
 
-  <!--
-	<div class="row">
-        <div class="col-lg-4">
-          <h2>Safari bug warning!</h2>
-          <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
-       </div>
-        <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
-        </div>
-      </div>
-    -->
 
 
 {% endblock content %}
@@ -85,13 +80,14 @@
 
   // 15 days from now!
   function get15dayFromNow() {
-    return new Date(new Date().valueOf() + 15 * 24 * 60 * 60 * 1000);
+    // return new Date(new Date().valueOf() + 15 * 24 * 60 * 60 * 1000);
+    return new Date('2015-11-15 10:00:00');
   }
 
   var $clock = $('#clock');
 
   $clock.countdown(get15dayFromNow(), function(event) {
-    $(this).html(event.strftime('%D days %H:%M:%S'));
+    $(this).html(event.strftime('%H:%M:%S left'));
   });
 
   $('#btn-reset').click(function() {
