quality checks for imported files

--- a/hackathon/templates/submissions/list.html
+++ b/hackathon/templates/submissions/list.html
@@ -39,7 +39,7 @@
                 <td>{{submission.auc_public}}</td>
             {% else %}
                 <td>{{submission.file_error}}</td>
-            {% end %}
+            {% endif %}
           </tr>
         {% endfor %}
         </tbody>
