--- a/hackathon/templates/submissions/leaderboard.html
+++ b/hackathon/templates/submissions/leaderboard.html
@@ -10,7 +10,13 @@
 
 	{% if teams %}
 
+
 	<div class="col-lg-offset-1 col-lg-10">
+        <div class="">
+        <p>The variables <code>date_last_logged_ios</code> and <code>date_last_logged</code> are not allowed to be used in any part of the training process. The winning teams will have to show the code to validate it. </p>
+        </div>
+        <br>
+
         <table class="table">
         <thead>
         	<th>position</th>
