--- a/hackathon/templates/submissions/leaderboard.html
+++ b/hackathon/templates/submissions/leaderboard.html
@@ -13,6 +13,7 @@
 
 	<div class="col-lg-offset-1 col-lg-10">
         <div class="">
+        <p> IMPORTANT: you have to send your presentations to sharon.biggar@socialpoint.es</p>
         <p>The variables <code>date_last_logged_ios</code> and <code>date_last_logged</code> are not allowed to be used in any part of the training process. The winning teams will have to show the code to validate it. </p>
         </div>
         <br>
