--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -48,6 +48,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'leaderboard' %}">Public Leaderboard</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'leaderboard_final' %}">Final Leaderboard</a>
+              </li>
             </ul>
 
             <ul class="nav navbar-nav pull-right">
