--- a/hackathon/templates/pages/home.html
+++ b/hackathon/templates/pages/home.html
@@ -45,9 +45,9 @@
 
 
 	<div class="starter-template">
-        <h1>Barcelona Gaming Data Hackathon</h1>
+        <h1>2nd Barcelona Gaming Data Hackathon</h1>
         <p class="lead">
-          Welcome data hacker to the BCN Gaming Hackathon.<br> 
+          Welcome data hacker to the 2nd BCN Gaming Hackathon.<br> 
           24 hours to show your habilities to the world.<br> 
           Ready?</p>
           <div class="panel panel-default">
@@ -80,7 +80,7 @@
   // 15 days from now!
   function get15dayFromNow() {
     // return new Date(new Date().valueOf() + 15 * 24 * 60 * 60 * 1000);
-    return new Date('2015-11-15 10:00:00');
+    return new Date('2016-10-16 10:00:00');
   }
 
   var $clock = $('#clock');
