--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -48,9 +48,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'leaderboard' %}">Public Leaderboard</a>
               </li>
+              {% comment %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'leaderboard_final' %}">Final Leaderboard</a>
               </li>
+              {% endcomment %}
             </ul>
 
             <ul class="nav navbar-nav pull-right">
