--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -46,7 +46,7 @@
           <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'leaderboard' %}">Public Leaderboard</a>
+                <a class="nav-link" href="{% url 'leaderboard' %}">Leaderboard</a>
               </li>
               {% comment %}
               <li class="nav-item">
