--- a/hackathon/templates/submissions/leaderboard.html
+++ b/hackathon/templates/submissions/leaderboard.html
@@ -24,7 +24,7 @@
         	<th>team</th>
         	<th>last_submission</th>
         	<th># submissions</th>
-        	<th>auc</th>
+        	<th>precision</th>
 		</thead>
         <tbody>
         {% for team in teams %}
@@ -34,7 +34,7 @@
             <td>{{ team.user.team }}</td>
             <td>{{ team.last_update }}</td>
             <td>{{ team.number }}</td>
-            <td>{{ team.auc }}</td>
+            <td>{{ team.auc|floatformat:3 }} %</td>
           </tr>
         {% endfor %}
         </tbody>
