fixed mainpage issue

--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -55,7 +55,7 @@
               {% endcomment %}
             </ul>
 
-            <ul class="nav navbar-nav pull-right">
+            <ul class="nav navbar-nav pull-xs-right">
               {% if request.user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'data' %}">Data</a>
