--- a/hackathon/templates/pages/data.html
+++ b/hackathon/templates/pages/data.html
@@ -12,11 +12,10 @@
   <h1> Get the data </h1>
   <hr>
 
-  <p><a class="btn btn-lg btn-success" href="https://s3.eu-central-1.amazonaws.com/bcndatahackathon/train_test.zip" role="button">Get Train and Test</a></p>
-  <p><a class="btn btn-lg btn-success" href="https://s3.eu-central-1.amazonaws.com/bcndatahackathon/DragonCityHackathon_baseline.R" role="button">Get Baseline Model</a></p>
-  <p><a class="btn btn-lg btn-success" href="https://s3.eu-central-1.amazonaws.com/bcndatahackathon/variables.pdf" role="button">Get Variable explanation</a></p>
-  <p><a class="btn btn-lg btn-success" href="https://s3.eu-central-1.amazonaws.com/bcndatahackathon/testset_churn.csv" role="button">Test results</a></p>
-  
+  <p><a class="btn btn-lg btn-success" href="https://s3.amazonaws.com/bcndatahackathon2/info_files.zip" role="button">Get Competition Data</a></p>
+  <p><a class="btn btn-lg btn-success" href="https://s3.amazonaws.com/bcndatahackathon2/variables.pdf" role="button">Get Variables Explanation</a></p> 
+  <p><a class="btn btn-lg btn-success" href="https://s3.amazonaws.com/bcndatahackathon2/presentation.pdf" role="button">Get Presentation</a></p> 
+
 
 </div>
 {% endblock content %}
