--- a/hackathon/templates/pages/home.html
+++ b/hackathon/templates/pages/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block extra_css %}
 <style>
@@ -71,35 +72,19 @@
 {% block extra_js %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="//cdn.rawgit.com/hilios/jQuery.countdown/2.1.0/dist/jquery.countdown.min.js"></script>
+  {# <script src="//cdn.rawgit.com/hilios/jQuery.countdown/2.1.0/dist/jquery.countdown.min.js"></script> #}
+  <script src="{% static 'js/jquery.countdown.min.js' %}"></script>
 <script>
 
   // Turn on Bootstrap
   $('[data-toggle="tooltip"]').tooltip();
 
-  // 15 days from now!
-  function get15dayFromNow() {
-    // return new Date(new Date().valueOf() + 15 * 24 * 60 * 60 * 1000);
-    return new Date('2016-10-16 10:00:00');
-  }
-
-  var $clock = $('#clock');
-
-  $clock.countdown(get15dayFromNow(), function(event) {
-    $(this).html(event.strftime('%H:%M:%S left'));
+  $("#clock").countdown("2016/10/16 10:00:00", function(event) {
+    $(this).text(
+      event.strftime('%H:%M:%S left')
+    );
   });
 
-  $('#btn-reset').click(function() {
-    $clock.countdown(get15dayFromNow());
-  });
-
-  $('#btn-pause').click(function() {
-    $clock.countdown('pause');
-  });
-
-  $('#btn-resume').click(function() {
-    $clock.countdown('resume');
-  });
 
 </script> 
 {% endblock extra_js %}
