--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}hackathon{% endblock title %}</title>
+    <title>{% block title %}Datathon{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -21,6 +21,11 @@
 
     <!-- This file store project specific CSS -->
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    <style>
+    .row { 
+      padding: 45px 0 0 0;
+    }
+    </style>
     {% endblock %}
 
     {% block extra_css %}
@@ -35,7 +40,7 @@
   <body>
 
     <div class="m-b">
-      <nav class="navbar navbar-dark navbar-static-top bg-inverse">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/">BCN Data Hackathon</a>
           <button type="button" class="navbar-toggler hidden-sm-up pull-right" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
@@ -43,7 +48,7 @@
           </button>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
+          <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'leaderboard' %}">Leaderboard</a>
@@ -55,7 +60,7 @@
               {% endcomment %}
             </ul>
 
-            <ul class="nav navbar-nav pull-xs-right">
+            <ul class="nav navbar-nav ml-auto">
               {% if request.user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'data' %}">Data</a>
