--- a/hackathon/templates/submissions/leaderboard.html
+++ b/hackathon/templates/submissions/leaderboard.html
@@ -7,14 +7,7 @@
 <div class="row">
 	<h1> Public Leaderboard </h1>
 	<hr>
-
 	{% if teams %}
-
-
-	<div class="col-lg-offset-1 col-lg-10">
-        <div class="">
-        <p> IMPORTANT: you have to send your presentations to sharon.biggar@socialpoint.es</p>
-        </div>
         <br>
 
         <table class="table">
@@ -24,7 +17,7 @@
         	<th>team</th>
         	<th>last_submission</th>
         	<th># submissions</th>
-        	<th>precision</th>
+        	<th>score</th>
 		</thead>
         <tbody>
         {% for team in teams %}
