refactored math performance functions. changed team names

--- a/hackathon/templates/pages/home.html
+++ b/hackathon/templates/pages/home.html
@@ -46,9 +46,9 @@
 
 
 	<div class="starter-template">
-        <h1>2nd Barcelona Gaming Data Hackathon</h1>
+        <h1>Barcelona Pollution Datathon</h1>
         <p class="lead">
-          Welcome data hacker to the 2nd BCN Gaming Hackathon.<br> 
+          Welcome data hacker to the Barcelona Pollution Datathon.<br> 
           24 hours to show your habilities to the world.<br> 
           Ready?</p>
           <div class="panel panel-default">
