fixed minor bugs

--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -42,7 +42,7 @@
     <div class="m-b">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="/">BCNAnalytics Data Hackathon</a>
+          <a class="navbar-brand" href="/">BCNAnalytics Datathon</a>
           <button type="button" class="navbar-toggler hidden-sm-up pull-right" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
             &#9776;
           </button>
