--- a/hackathon/templates/pages/data.html
+++ b/hackathon/templates/pages/data.html
@@ -9,9 +9,8 @@
   <div class="col col-lg-8">
     <h1> Get the data </h1> 
     <hr>
-    <p><a class="btn btn-lg btn-success" href="https://s3.amazonaws.com/bcndatahackathon2/info_files.zip" role="button">Get Competition Data</a></p>
-    <p><a class="btn btn-lg btn-success" href="https://s3.amazonaws.com/bcndatahackathon2/variables.pdf" role="button">Get Variables Explanation</a></p> 
-    <p><a class="btn btn-lg btn-success" href="https://s3.amazonaws.com/bcndatahackathon2/presentation.pdf" role="button">Get Presentation</a></p> 
+    <p><a class="btn btn-lg btn-success" href="https://docs.google.com/document/d/1VdRldjLT6wyVjJRLgX1axyJwm2vyD4-aFMIN0G61arY/edit?usp=sharing" role="button">Get Participants Guidebook</a></p>
+    <p><a class="btn btn-lg btn-success" href="https://s3.amazonaws.com/bcndatahackathon2/variables.pdf" role="button">Get competition data</a></p> 
   </div>
 </div>
 {% endblock content %}
