--- a/hackathon/templates/submissions/leaderboard_final.html
+++ b/hackathon/templates/submissions/leaderboard_final.html
@@ -19,7 +19,7 @@
         <thead>
         	<th>position</th>
         	<th>team</th>
-        	<th>auc</th>
+        	<th>logloss</th>
 		</thead>
         <tbody>
         {% for team in teams %}
