--- a/hackathon/templates/submissions/list.html
+++ b/hackathon/templates/submissions/list.html
@@ -32,7 +32,7 @@
         <thead>
         	<th>file</th>
         	<th>date</th>
-        	<th>precision</th>
+        	<th>logloss</th>
 		</thead>
         <tbody>
         {% for submission in submissions %}
