--- a/hackathon/templates/submissions/leaderboard.html
+++ b/hackathon/templates/submissions/leaderboard.html
@@ -27,7 +27,7 @@
             <td>{{ team.user.team }}</td>
             <td>{{ team.last_update }}</td>
             <td>{{ team.number }}</td>
-            <td>{{ team.auc|floatformat:3 }} %</td>
+            <td>{{ team.auc|floatformat:3 }}</td>
           </tr>
         {% endfor %}
         </tbody>
