--- a/hackathon/templates/pages/data.html
+++ b/hackathon/templates/pages/data.html
@@ -9,7 +9,7 @@
   <div class="col col-lg-8">
     <h1> Get the data </h1> 
     <hr>
-    <p><a class="btn btn-lg btn-success" href="https://docs.google.com/document/d/1VdRldjLT6wyVjJRLgX1axyJwm2vyD4-aFMIN0G61arY/edit?usp=sharing" role="button">Get Participants Guidebook</a></p>
+    {# <p><a class="btn btn-lg btn-success" href="https://docs.google.com/document/d/1VdRldjLT6wyVjJRLgX1axyJwm2vyD4-aFMIN0G61arY/edit?usp=sharing" role="button">Get Participants Guidebook</a></p> #}
     <p><a class="btn btn-lg btn-success" href="https://drive.google.com/open?id=1FbzZP7Py-ufZ9V7JBXvEqISN7lVvqrSk" role="button">Get competition data</a></p> 
   </div>
 </div>
