--- a/hackathon/templates/pages/home.html
+++ b/hackathon/templates/pages/home.html
@@ -81,7 +81,7 @@
 
   $("#clock").countdown("2018/01/21 10:30:00", function(event) {
     $(this).text(
-      event.strftime('%H:%M:%S left')
+      event.strftime('%D days and %H:%M:%S left')
     );
   });
 
