--- a/hackathon/templates/submissions/leaderboard.html
+++ b/hackathon/templates/submissions/leaderboard.html
@@ -17,7 +17,7 @@
         	<th>team</th>
         	<th>last_submission</th>
         	<th># submissions</th>
-        	<th>score</th>
+        	<th>logloss</th>
 		</thead>
         <tbody>
         {% for team in teams %}
